// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI/Table Renders StyledTable correctly 1`] = `
<DocumentFragment>
  .c0 {
  width: 100%;
  background-color: white;
  overflow: scroll;
}

<table
    class="c0"
  />
</DocumentFragment>
`;

exports[`UI/Table Renders StyledTableBody correctly 1`] = `
<DocumentFragment>
  .c0 {
  overflow: scroll;
  position: relative;
}

<table>
    <tbody
      class="c0"
    />
  </table>
</DocumentFragment>
`;

exports[`UI/Table Renders StyledTableCell correctly 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 12px !important;
  font-family: Raleway,sans-serif !important;
  color: #4C688B !important;
  padding: 10px;
}

<table>
    <tbody>
      <tr>
        <td
          class="c0"
        />
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`UI/Table Renders StyledTableCellHeader correctly 1`] = `
<DocumentFragment>
  .c0 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  font-size: 12px !important;
  color: white !important;
  background-color: #4C688B;
  padding: 10px;
  z-index: 1;
}

<table>
    <tbody>
      <tr>
        <th
          class="c0"
        />
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`UI/Table Renders StyledTableHead correctly 1`] = `
<DocumentFragment>
  <table>
    <thead
      class=""
    />
  </table>
</DocumentFragment>
`;

exports[`UI/Table Renders StyledTableRoot correctly 1`] = `
<DocumentFragment>
  .c0 {
  margin-top: 0px;
  overflow-x: auto;
  margin: 0;
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12);
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`UI/Table Renders StyledTableRootInline correctly 1`] = `
<DocumentFragment>
  .c0 {
  overflow-x: auto;
  width: 50%;
  display: inline-block;
  padding: 20px;
  margin: 0;
  box-sizing: border-box;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`UI/Table Renders StyledTableRow correctly 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
}

.c0:hover {
  background: #FFEDAA;
}

<table>
    <tbody>
      <tr
        class="c0"
      />
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`UI/Table Renders StyledTableRowHead correctly 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=""
      />
    </tbody>
  </table>
</DocumentFragment>
`;
